--- a/style.css
+++ b/style.css
@@ -1,71 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Pacifico&display=swap');
 
 *,::before, ::after{
     padding: 0px;
     margin: 0px;
 }
 body{
-    height: 500px;
+    height: 600px;
     width: 350px;
+    background: linear-gradient(180deg, #C850C0 0%, #FFCC70 90%);
     display: flex;
-    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    background-image: linear-gradient(180deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+    flex-direction: column;
 }
-header{
+h1{
     font-family: 'Pacifico', cursive;
-    color: rgba(255, 255, 255, 0.7);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 15%;
-    width: 100%;
+    color: #FFCC70;
+    font-size: 55px;
 }
-h2{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-main{
-    height: 75%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+a{
+    font-family: 'Bungee', cursive;
+    text-decoration: none;
+    color: #C850C0;
+    font-size: 35px;
 }
 textarea{
-    outline: none;
     resize: none;
-    overflow: auto;
-}
-#save{
-    transition-duration: 0.4s;
-    background-color: white;
-    border: none;
-    color: black;
-    padding: 15px 32px;
-    text-align: center;
-    border-radius: 8px;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border: 1.5px solid black;
-}
-#save:hover{
-    transition-duration: 0.4s;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    background-color: black;
-    border: 1.5px solid white;
-    color: white;
-}
-#save:active{
-    transform: translateY(4px);
-}
-footer{
-    height: 15%;
-}
-footer a{
-    color: rgba(255, 255, 255, 0.7);
-    text-decoration: none;
 }
